--- a/test.html
+++ b/test.html
@@ -10,11 +10,11 @@
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/BootSideMenu.css" rel="stylesheet">
 
-	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	<!-- HTML5 shim e Respond.js per rendere compatibile l'HTML 5 in IE8 -->
+	<!-- ATTENZIONE: Respond.js non funziona se la pagina viene visualizzata in locale file:// -->
     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+      <script src="js/html5shiv.min.js"></script>
+      <script src="js/respond.min.js"></script>
       <![endif]-->
   </head>
   <body>
