--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
   <title>Test</title>
 
   <!-- Bootstrap -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
   <link href="css/BootSideMenu.css" rel="stylesheet">
   <!-- HTML5 shim e Respond.js per rendere compatibile l'HTML 5 in IE8 -->
   <!-- ATTENZIONE: Respond.js non funziona se la pagina viene visualizzata in locale file:// -->
@@ -174,8 +174,8 @@
   </div>
   <!--Normale contenuto di pagina-->
 
-  <script src="js/jquery-1.11.1.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
+  <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
   <script src="js/BootSideMenu.js"></script>
 
   <script type="text/javascript">
