--- a/test.html
+++ b/test.html
@@ -8,11 +8,11 @@
 
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-  <link href="css/BootSideMenu.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.rawgit.com/AndreaLombardo/BootSideMenu/master/css/BootSideMenu.css">
   <!-- HTML5 shim e Respond.js per rendere compatibile l'HTML 5 in IE8 -->
   <!-- ATTENZIONE: Respond.js non funziona se la pagina viene visualizzata in locale file:// -->
 <!--[if lt IE 9]>
-<script src="js/html5shiv.min.js"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv-printshiv.min.js"></script>
 <script src="js/respond.min.js"></script>
 <![endif]-->
 
