Support side panels with relative (percentage) width

--- a/test.html
+++ b/test.html
@@ -25,7 +25,7 @@
 
   <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-  <script src="https://cdn.rawgit.com/AndreaLombardo/BootSideMenu/master/js/BootSideMenu.js"></script>
+  <script src="js/BootSideMenu.js"></script>
 
   <script type="text/javascript">
   $(document).ready(function(){
@@ -74,7 +74,7 @@
   <!--/Test -->
 
   <!--Test 2 -->
-  <div id="test2">
+  <div id="test2" style="width:20%;">
     <div class="list-group">
       <a href="#" class="list-group-item active">Cras justo odio</a>
       <a href="#" class="list-group-item">Dapibus ac facilisis in</a>
