--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
                     <a href="examples/5-close-on-click.html" class="list-group-item">Don't close on click</a>
                     <a href="examples/6-events.html" class="list-group-item">Events</a>
                     <a href="examples/7-on-toggler-click.html" class="list-group-item">On Arrow Click</a>
+                    <a href="examples/8-simple-left-with-select.html" class="list-group-item">Basic With Selectbox</a>
                 </ul>
             </div>
         </div>
