--- a/examples/7-on-toggler-click.html
+++ b/examples/7-on-toggler-click.html
@@ -88,7 +88,7 @@
         }
     });
 });</pre>
-                    <p>That's all. <a href="../index.html">Go back</a>!</p>
+                    <p>Menu with a selectbox under the user section in the <a href="8-simple-left-with-select.html">next example</a>.</p>
                 </div>
             </div>
         </div>
