--- a/examples/8-simple-left-with-select.html
+++ b/examples/8-simple-left-with-select.html
@@ -115,6 +115,9 @@
     &lt;/select&gt;
 &lt;/div&gt;
                     </pre>
+
+                    <p>That's all for now. <a href="../index.html">Go back</a>!</p>
+
                 </div>
             </div>
         </div>
